modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -419,7 +419,7 @@ hr:active {
 
 @media screen and (max-width: 1440px) and (min-width: 1024px) {
     .card {
-        width: calc(33.333% - 40px); 
+        width: calc(100% - 40px); 
         height: 480px;
         display: flex;
         align-items: center;
@@ -427,14 +427,6 @@ hr:active {
         margin: 10px;
     }
 
-}
-
-@media screen and (max-width: 1337px) and (min-width: 1024px) {
-    .card {
-        width: 250px; /* Adjust width to prevent overlapping */
-        height: 450px;
-        margin: 10px; /* Ensure spacing between cards */
-    }
 }
 
 .card:hover {
@@ -453,22 +445,19 @@ hr:active {
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
 } 
 
-@media screen and (max-width: 1440px) and (min-width: 1024px) {
+@media screen and (max-width: 1590px) and (min-width: 768px) {
     .product-card {
-        width: calc(100% - 40px); /* Responsive width with gap considered */
+        width: calc(100% - 30px); /* Two cards per row with gap considered */
         height: auto;
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        margin: 10px 0; /* Maintain vertical margin */
     }
 
     .product-card img {
-        width: 200px;
-        height: 200px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensure image covers the area */
     }
 }
-
 
 .product-card:hover {
     transform: scale(1.05);
@@ -499,7 +488,8 @@ hr:active {
 
     .body-card {
         width: 150px;
-        height: 180px;
+        height: 170px;
+        object-fit: contain;
     }
 
 }
@@ -513,7 +503,7 @@ hr:active {
 }
 
 .card-palette-laptop  {
-    left: 340px;
+    left: 260px;
 }
 
 @media screen and (max-width: 1440px) and (min-width: 1024px) {
