--- a/src/index.css
+++ b/src/index.css
@@ -521,16 +521,19 @@ hr:active {
 
 .card-img-laptop {
     margin: 0 auto;
-    width: 100%;
+    position: relative;
+    width: 80%;
+    z-index: 1; 
 }
 
 .card-svg_like {
     cursor: pointer;
     width: 36px;
+    height: 36px;
     position: absolute;
     top: 10px;
     right: 10px;
-    color: #6F4C9A;
+    z-index: 2;
 }
 
 .card-footer {
