--- a/src/index.css
+++ b/src/index.css
@@ -403,7 +403,6 @@ hr:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; 
-    gap: 40px;
 }
 
 .card {
@@ -412,21 +411,11 @@ hr:active {
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 15px;
+    width: 305px;
+    height: 480px;
     border: 2px solid #5a3e7d07;
     transition: all .2s;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
-}
-
-@media screen and (max-width: 1440px) and (min-width: 1024px) {
-    .card {
-        width: calc(100% - 40px); 
-        height: 480px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 10px;
-    }
-
 }
 
 .card:hover {
@@ -499,12 +488,11 @@ hr:active {
     height: 88px;
     position: absolute;
     bottom: 0; 
-    left: 200px;
+    left: 190px;
 }
 
 .card-palette-laptop  {
-
-    left: 260px;
+    left: 250px;
 }
 
 @media screen and (max-width: 1440px) and (min-width: 1024px) {
@@ -523,7 +511,7 @@ hr:active {
 .card-img-laptop {
     margin: 0 auto;
     position: relative;
-    width: 80%;
+    width: 90%;
     z-index: 1; 
 }
 
