--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@ body {
     margin: 0 auto;
     font-family: "Inter", sans-serif;
     background-color: #F8F7FA;
+    color: #1C1817;
 }
 
 a {
     text-decoration: none;
 }
+
 
 
 /* #region Header */
