--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,7 @@ i {
 
 .poster-container {
   width: 100%;
-  height: 765px;
+  height: 732px;
   margin: 40px 0 0 40px;
   background-image: url("./components/MainPage/img/poster-photo.png");
   background-repeat: no-repeat;
@@ -257,10 +257,10 @@ i {
 .product-list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   min-width: 375px;
-  height: fit-content;
+  height: 730px;
   margin-bottom: 0;
   padding: 24px;
   padding-right: 20px;
@@ -611,7 +611,6 @@ hr:active {
     color: #1c1817;
 
 }
-
 
 
 .ant-card .ant-card-body {
