--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     margin: 0 auto;
     font-family: "Inter", sans-serif;
     background-color: #F8F7FA;
+    color: #1c1817;
 }
 
 a {
@@ -27,7 +28,7 @@ a {
     line-height: 120%;
     font-weight: 800;
     font-style: normal;
-    color: #000;
+    color: #1c1817;
     margin: 0;
 }
 
