--- a/src/index.css
+++ b/src/index.css
@@ -700,6 +700,12 @@ hr:active {
   gap: 8px;
 }
 
+.footer-contact-nav {
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
+
 .social-icon svg {
   width: 32px;
   height: 32px;
