--- a/src/index.css
+++ b/src/index.css
@@ -306,16 +306,15 @@ i {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 2px;
-  height: 24px;
+  gap: 8px;
   cursor: pointer;
 }
 
 .button-link {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 2px;
   font-size: 16px;
   color: #00820d;
   text-decoration: none;
@@ -323,6 +322,12 @@ i {
 
 .button-link:active {
   color: #6f4c9a;
+}
+
+.button-hr {
+  border: 1px solid #00820d;
+  width: 100%;
+  margin: 0;
 }
 
 .slider-text-button .button-content {
