--- a/src/index.css
+++ b/src/index.css
@@ -338,6 +338,27 @@ hr:active {
   color: #6f4c9a;
 }
 
+@media (max-width: 1024px) {
+  /* For screens smaller than 1024px */
+ .slider-text { 
+    justify-content: space-between;
+    padding-left: 24px;
+    padding-right: 24px;
+ }
+}
+
+@media (max-width: 375px){
+  .slider-text h2 {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 375px) {
+  .slider-text { 
+    padding-left: 16px;
+    padding-right: 16px;
+ }
+}
 /* #endregion */
 
 /* #region Carousel */
@@ -418,6 +439,10 @@ hr:active {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
 }
 
+.wrapper-bottom {
+  padding-bottom: 24px;
+}
+
 .card:hover {
   transform: scale(1.05);
 }
@@ -432,23 +457,6 @@ hr:active {
   height: 256px;
   transition: all 0.3s;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
-}
-
-@media screen and (max-width: 1590px) and (min-width: 768px) {
-  .card {
-    height: auto;
-  }
-  .product-card {
-    width: calc(100% - 30px); /* Two cards per row with gap considered */
-    margin: 10px 0; /* Maintain vertical margin */
-    height: auto;
-  }
-
-  .product-card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensure image covers the area */
-  }
 }
 
 .product-card:hover {
@@ -472,18 +480,6 @@ hr:active {
   height: 200px;
 }
 
-@media screen and (max-width: 1440px) and (min-width: 1024px) {
-  .card-img {
-    margin: 0 auto;
-    position: relative;
-  }
-
-  .body-card {
-    width: 150px;
-    height: 170px;
-    object-fit: contain;
-  }
-}
 
 .card-palette,
 .card-palette-laptop {
@@ -514,6 +510,8 @@ hr:active {
   .card-img-laptop {
     width: 120px;
   }
+
+  
 }
 
 .card-img-laptop {
@@ -577,6 +575,120 @@ hr:active {
   flex-direction: column;
   position: relative;
 }
+
+@media (max-width: 1024px) {
+  .carousel-wrapper {
+    padding: 24px;
+  }
+  .ant-card-body {
+    padding: 12px;
+  }
+  .card {
+    height: 100%;
+    border-radius: 20px;
+  }
+
+  .card p {
+    font-size: 24px;
+  }
+
+  .product-card {
+    width: calc(100% - 30px); /* Two cards per row with gap considered */
+    margin: 10px 0; /* Maintain vertical margin */
+    height: auto;
+  }
+
+  .product-card img {
+    height: auto;
+    object-fit: cover; /* Ensure image covers the area */
+  }
+
+  .wrapper-bottom {
+    padding-bottom: 0;
+  }
+
+  .card-img {
+    margin: 0 auto;
+    position: relative;
+  }
+
+  .body-card {
+    width: 100px;
+    height: 124px;
+    object-fit: contain;
+  }
+
+  .card h3 {
+    font-size: 16px;
+    padding: 12px 12px 4px 0px;
+  }
+
+  .card-rate {
+    font-size: 12px;
+  }
+
+  .card-svg_like {
+    width: 32px;
+    height: 32px;
+  } 
+
+  .card-palette {
+    height: 44px;
+    width: 12px;
+    left: 130%;
+  }
+
+  .card-palette-laptop {
+    width: 12px;
+    height: 12px;
+    left: 95%;
+  }
+
+  .arrow-container  {
+    display: none;
+  }
+
+  .product-card {
+    width: 170px;
+    height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .product-img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 375px)  {  
+  .carousel-wrapper {
+    padding: 16px;
+  }
+  .card-footer {
+    margin-top: 16px;
+  }
+
+  .card p {
+    font-size: 16px;
+  }
+
+  .card-svg_like {
+    width: 24px;
+    height: 24px;
+  } 
+  
+  .card-buy {
+    height: 48px;
+    width: 48px;
+  }
+
+  .product-card {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 
 /* #endregion */
 
