modified:   src/components/MainPage/Brands/Brands.jsx 	modified:   src/components/MainPage/Slider/LaptopSlider.jsx 	modified:   src/components/MainPage/Slider/MobileSlider.jsx     modified:   src/components/MainPage/Slider/ViewedSlider.jsx 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -400,6 +400,10 @@ hr:active {
     border-left: 0;
 }
 
+.wrapper-bottom {
+    padding-bottom: 24px;
+}
+
 /* #region Card */
 .card-container {
     display: flex;
@@ -583,8 +587,6 @@ hr:active {
     flex-direction: column;
     position: relative;
 }
-
-/* #endregion */
 
 /* #endregion */
 
