--- a/src/index.css
+++ b/src/index.css
@@ -422,7 +422,7 @@ hr:active {
   border-left: 0;
 }
 
-.wrapper-bottom {
+.wrapper-bottom, .carousel-brands-container {
     padding-bottom: 24px;
 }
 
