modified:   src/components/MainPage/Brands/Brands.jsx 	modified:   src/components/MainPage/Slider/LaptopSlider.jsx 	modified:   src/components/MainPage/Slider/MobileSlider.jsx 	modified:   src/components/MainPage/Slider/ViewedSlider.jsx 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -347,18 +347,17 @@ hr:active {
  }
 }
 
-@media (max-width: 375px){
+@media (max-width: 450px){
   .slider-text h2 {
     font-size: 24px;
   }
-}
-
-@media (max-width: 375px) {
   .slider-text { 
     padding-left: 16px;
     padding-right: 16px;
- }
+    padding-top: 32px;
+ } 
 }
+
 /* #endregion */
 
 /* #region Carousel */
@@ -496,7 +495,6 @@ hr:active {
 
 .card-img {
   margin: 0 auto;
-
   position: relative;
 }
 
@@ -605,6 +603,11 @@ hr:active {
   .carousel-wrapper {
     padding: 24px;
   }
+
+  .carousel-brands-container {
+    padding-bottom: 0;
+  }
+
   .ant-card-body {
     padding: 12px;
   }
@@ -659,8 +662,9 @@ hr:active {
 
   .card-palette {
     height: 44px;
-    width: 12px;
-    left: 130%;
+    left: 105%;
+    bottom: 0;
+    right: 0;
   }
 
   .card-palette-laptop {
@@ -686,13 +690,16 @@ hr:active {
   }
 }
 
-@media (max-width: 375px)  {  
+@media (max-width: 450px)  {  
   .slick-track {
     gap: 8px;
   }
   .card {
     width: auto;
     height: 287px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .card-rate {
@@ -704,10 +711,10 @@ hr:active {
     margin-inline-end: 1px;
   }
 
-
   .carousel-wrapper {
     padding: 16px;
   }
+
   .card-footer {
     margin-top: 16px;
   }
@@ -719,11 +726,8 @@ hr:active {
   }
 
   .card p {
-    font-size: 14px;
-    font-weight: medium;
-  }
-
-  .card p {
+    font-size: 16px;
+    font-weight: 600;
     padding-top: 20px;
   }
 
@@ -733,17 +737,17 @@ hr:active {
   } 
   
   .card-buy {
-    height: 45px;
-    width: 45px;
+    height: 48px;
+    width: 48px;
   }
 
-  .body-card {
-    height: 90px;
+  .body-card {  
     width: auto;
+    height: 100px;
   }
 
   .card-palette {
-    left: 85px;
+    left: 115%;
   }
 
   .product-card {
